# dpp-core

./: .clippy.toml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  justfile  rust-toolchain.toml
benches/: Cargo.toml  README.md
benches/src/: aas.rs  calc.rs  crypto.rs  gs1.rs  validation.rs
crates/dpp-calc/: Cargo.toml  LICENSE  README.md
crates/dpp-calc/examples/: calculate_metrics.rs
crates/dpp-calc/src/: lib.rs
crates/dpp-calc/src/co2e/: calculator.rs  cfb.rs  golden_vectors.rs  gwp_factors.rs  mod.rs  parameters.rs  thresholds.rs
crates/dpp-calc/src/kernel/: error.rs  factor.rs  hashing.rs  mod.rs  receipt.rs  ruleset.rs  synthetic_factor.rs  tests.rs
crates/dpp-calc/src/repairability/: calculator.rs  golden_vectors.rs  mod.rs  parameters.rs  thresholds.rs
crates/dpp-calc/src/repairability_index/: calculator.rs  golden_vectors.rs  mod.rs  parameters.rs  thresholds.rs
crates/dpp-calc/src/ruleset_registry/: mod.rs  resolve.rs  status.rs  tests.rs
crates/dpp-crypto/: Cargo.toml  README.md
crates/dpp-crypto/examples/: credential_and_transfer.rs
crates/dpp-crypto/src/: lib.rs  test_support.rs
crates/dpp-crypto/src/access/: filter.rs  mod.rs  policy.rs  status_list.rs  tests.rs
crates/dpp-crypto/src/identity/: did_builder.rs  local_service.rs  mod.rs  passport_credential.rs  tests.rs
crates/dpp-crypto/src/jws/: algorithm.rs  canonical.rs  mod.rs  proptests.rs  signer.rs  tests.rs  verifier.rs
crates/dpp-crypto/src/keystore/: crypto.rs  entry.rs  migration.rs  mod.rs  rotation.rs  store.rs  tests.rs
crates/dpp-digital-link/: Cargo.toml  README.md
crates/dpp-digital-link/examples/: gs1_and_aas.rs
crates/dpp-digital-link/src/: lib.rs
crates/dpp-digital-link/src/aas/: builder.rs  mapper.rs  mod.rs  model.rs  property.rs  semantic_ids.rs  templates.rs  tests.rs
crates/dpp-digital-link/src/digital_link/: ai.rs  codec.rs  error.rs  gtin.rs  link.rs  mod.rs  qr.rs  tests.rs
crates/dpp-digital-link/src/jsonld/: context.rs  mod.rs  tests.rs
crates/dpp-digital-link/src/linktype/: media_type.rs  mod.rs  negotiate.rs  request.rs  tests.rs  vocabulary.rs
crates/dpp-digital-link/tests/: proptest_parse.rs
crates/dpp-domain/: Cargo.toml  README.md
crates/dpp-domain/examples/: create_passport.rs
crates/dpp-domain/schemas/aluminium/: v1.0.0.json  v1.1.0.json
crates/dpp-domain/schemas/battery/: v1.0.0.json  v2.0.0.json
crates/dpp-domain/schemas/construction/: v1.0.0.json  v1.1.0.json
crates/dpp-domain/schemas/detergent/: v1.0.0.json  v1.1.0.json
crates/dpp-domain/schemas/electronics/: v1.0.0.json  v1.1.0.json
crates/dpp-domain/schemas/furniture/: v1.0.0.json  v1.1.0.json
crates/dpp-domain/schemas/steel/: v1.0.0.json  v1.1.0.json
crates/dpp-domain/schemas/textile/: v1.0.0.json  v1.1.0.json  v1.2.0.json
crates/dpp-domain/schemas/textile-unsold/: v1.0.0.json
crates/dpp-domain/schemas/toy/: v1.0.0.json  v1.1.0.json
crates/dpp-domain/schemas/tyre/: v1.0.0.json
crates/dpp-domain/schemas/unsold-goods/: v1.0.0.json
crates/dpp-domain/sectors/: aluminium.json  battery.json  construction.json  detergent.json  electronics.json  furniture.json  steel.json  textile-unsold.json  textile.json  toy.json  tyre.json  unsold-goods.json
crates/dpp-domain/src/: lib.rs  test_support.rs
crates/dpp-domain/src/catalog/: catalog.rs  descriptor.rs  error.rs  mod.rs  regime.rs  status.rs  tests.rs
crates/dpp-domain/src/compliance/: mod.rs  passthrough_registry.rs
crates/dpp-domain/src/domain/: eol.rs  error.rs  field_error.rs  graph.rs  gtin.rs  identity.rs  lint.rs  mod.rs  product_identity.rs  status.rs  validation.rs
crates/dpp-domain/src/ports/: archive.rs  compliance.rs  ghosts.rs  identity_port.rs  mod.rs  passport_repo.rs  plugin_host_port.rs  registry_sync.rs  seal.rs
crates/dpp-domain/src/schemas/: embedded.rs  lens.rs  mod.rs  registry.rs  tests.rs  types.rs  versioned.rs
crates/dpp-evidence/: Cargo.toml  README.md
crates/dpp-evidence/examples/: generate_fixture.rs
crates/dpp-evidence/spec/: dossier-v1.md  dossier-v1.schema.json
crates/dpp-evidence/src/: lib.rs
crates/dpp-evidence/src/audit/: entry.rs  mod.rs  tests.rs  verify.rs
crates/dpp-plugin-sdk/: Cargo.toml  README.md
crates/dpp-plugin-sdk/src/: abi.rs  codec.rs  entry.rs  lib.rs  tests.rs  validate.rs
crates/dpp-plugin-traits/: Cargo.toml  README.md
crates/dpp-plugin-traits/src/: error.rs  lib.rs  meta.rs  plugin.rs  result.rs  tests.rs  version.rs
crates/dpp-registry/: Cargo.toml  README.md
crates/dpp-registry/examples/: registry_identifiers.rs
crates/dpp-registry/src/: lib.rs  registry.rs
crates/dpp-rules/: Cargo.toml  README.md
crates/dpp-rules/examples/: regulatory_rules.rs
crates/dpp-rules/src/: lib.rs
crates/dpp-tests/: Cargo.toml  README.md
crates/dpp-tests/src/: fixtures.rs  lib.rs
crates/dpp-tests/tests/: access_tier_gatekeeping.rs  adversarial_security.rs  all_sectors_aas.rs  battery_end_to_end.rs  jws_cross_verification.rs  mod_rs_is_pure_index.rs  ports_inventory.rs  schema_conformity.rs  textile_end_to_end.rs  transfer_of_responsibility.rs
docs/: README.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: digital_link_parse.rs  plugin_abi_envelope.rs
plugins/: Cargo.toml  README.md
plugins/sector-aluminium/: Cargo.toml
plugins/sector-aluminium/src/: lib.rs
plugins/sector-battery/: Cargo.toml
plugins/sector-battery/src/: lib.rs
plugins/sector-construction/: Cargo.toml
plugins/sector-construction/src/: lib.rs
plugins/sector-detergent/: Cargo.toml
plugins/sector-detergent/src/: lib.rs
plugins/sector-electronics/: Cargo.toml
plugins/sector-electronics/src/: lib.rs
plugins/sector-furniture/: Cargo.toml
plugins/sector-furniture/src/: lib.rs
plugins/sector-steel/: Cargo.toml
plugins/sector-steel/src/: lib.rs
plugins/sector-textile/: Cargo.toml
plugins/sector-textile/src/: fibre_composition.rs  lib.rs  unsold_goods.rs
plugins/sector-toy/: Cargo.toml
plugins/sector-toy/src/: lib.rs
plugins/sector-tyre/: Cargo.toml
plugins/sector-tyre/src/: lib.rs
(+157 files in other folders)
