[workspace]
resolver = "2"
members = [
    "crates/dpp-rules",
    "crates/dpp-domain",
    "crates/dpp-crypto",
    "crates/dpp-digital-link",
    "crates/dpp-plugin-traits",
    "crates/dpp-plugin-sdk",
    "crates/dpp-registry",
    "crates/dpp-calc",
    "crates/dpp-tests",
    "benches",
]
exclude = [
    "plugins/*",
]

[workspace.package]
version     = "0.8.0"
edition     = "2024"
authors     = ["Odal Node <dev@odal-node.io>"]
license     = "Apache-2.0"
repository  = "https://github.com/odal-node/dpp-core"
homepage    = "https://odal-node.io"
rust-version = "1.96"

# ---------------------------------------------------------------------------
# cargo-release: all members share one lockstep version, so cut one tag for
# the whole release instead of cargo-release's default per-crate tag scheme
# (crate-name-v0.4.1 for every publishable member).
# ---------------------------------------------------------------------------
[workspace.metadata.release]
consolidate-commits = true
tag-name    = "v{{version}}"
tag-prefix  = ""
tag-message = "Release version {{version}}"

# ---------------------------------------------------------------------------
# Shared dependency versions — crates inherit these with `workspace = true`
# ---------------------------------------------------------------------------
[workspace.dependencies]
# Internal workspace crates — path for local builds (always wins inside this
# workspace), version for what `cargo publish` embeds for external consumers.
# One line per crate here instead of one per dependent Cargo.toml, so a
# lockstep version bump is a single edit, not N.
dpp-rules         = { path = "crates/dpp-rules", version = "0.8.0" }
dpp-domain        = { path = "crates/dpp-domain", version = "0.8.0" }
dpp-plugin-traits = { path = "crates/dpp-plugin-traits", version = "0.8.0" }
dpp-crypto        = { path = "crates/dpp-crypto", version = "0.8.0" }
dpp-digital-link  = { path = "crates/dpp-digital-link", version = "0.8.0" }

# Serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_with   = "3"
# RFC 8785 JSON Canonicalization Scheme (JCS) — the signing/content-binding contract
serde_jcs    = "0.2"
# GZIP — decoding W3C Bitstring Status List `encodedList` (pure, no infra)
flate2       = "1"

# Date/time
chrono       = { version = "0.4", features = ["serde"] }

# Async
async-trait  = "0.1"

# Identity & cryptography
base64       = "0.22"
hex          = "0.4"
sha2         = "0.11"
ed25519-dalek = { version = "3", features = ["rand_core"] }
zeroize      = { version = "1", features = ["derive"] }
aes-gcm      = "0.11"
rand         = "0.10"

# Schema validation
jsonschema   = "0.46"
semver       = "1"

# Property-based testing (dev-only)
proptest     = "1"

# Telemetry
tracing      = "0.1"

# Utilities
uuid         = { version = "1", features = ["v7", "serde"] }
anyhow       = "1"
thiserror    = "2"

# KDF
argon2       = "0.5"

# MAC
hmac         = "0.13"

# Benchmarking
criterion    = { version = "0.5", features = ["html_reports"] }
