[package]
name    = "dpp-benches"
version = "0.0.0"
edition.workspace      = true
rust-version.workspace = true
publish = false

[dev-dependencies]
criterion   = { workspace = true }
dpp-calc    = { workspace = true }
dpp-crypto  = { workspace = true }
dpp-domain  = { workspace = true }
dpp-digital-link     = { workspace = true }
dpp-tests   = { workspace = true }
chrono      = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
base64      = { workspace = true }

[[bench]]
name    = "crypto"
harness = false
path    = "src/crypto.rs"

[[bench]]
name    = "validation"
harness = false
path    = "src/validation.rs"

[[bench]]
name    = "gs1"
harness = false
path    = "src/gs1.rs"

[[bench]]
name    = "calc"
harness = false
path    = "src/calc.rs"

[[bench]]
name    = "aas"
harness = false
path    = "src/aas.rs"
