# Shared workspace for the 10 sector plugins. Deliberately separate from the
# parent dpp-core workspace (excluded there via `exclude = ["plugins/*"]`)
# because these compile to a different target (`wasm32-wasip1`) via
# `just build-plugins` / `just build-plugin <name>`.
[workspace]
resolver = "2"
members = [
    "sector-aluminium",
    "sector-battery",
    "sector-construction",
    "sector-detergent",
    "sector-electronics",
    "sector-furniture",
    "sector-steel",
    "sector-textile",
    "sector-toy",
    "sector-tyre",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
dpp-plugin-sdk = { path = "../crates/dpp-plugin-sdk" }
serde_json     = "1"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
