[package]
name        = "dpp-plugin-sdk"
description = "Guest-side SDK and ABI export macro for Odal Node Wasm sector plugins"
keywords    = ["dpp", "wasm", "plugin", "sdk", "sector"]
categories  = ["wasm"]
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
rust-version.workspace = true

[lib]
name = "dpp_plugin_sdk"
path = "src/lib.rs"

[dependencies]
dpp-plugin-traits = { workspace = true }
dpp-rules         = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
