[package]
name        = "dpp-rules"
description = "Pure EU ESPR cross-field regulatory rules, shared by dpp-domain and the Wasm sector plugins"
keywords    = ["dpp", "espr", "validation", "no-std"]
categories  = ["no-std"]
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
rust-version.workspace = true

[lib]
name = "dpp_rules"
path = "src/lib.rs"

[features]
# Ruleset-bundle format + verification. Pulls in `std` (see lib.rs) — the
# crate's default (no-feature) build stays `no_std`.
bundle = [
    "dep:serde",
    "dep:serde_json",
    "dep:serde_jcs",
    "dep:chrono",
    "dep:sha2",
    "dep:base64",
    "dep:hex",
    "dep:thiserror",
]

[dependencies]
serde      = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_jcs  = { workspace = true, optional = true }
chrono     = { workspace = true, optional = true }
sha2       = { workspace = true, optional = true }
base64     = { workspace = true, optional = true }
hex        = { workspace = true, optional = true }
thiserror  = { workspace = true, optional = true }
